--- a/about.html
+++ b/about.html
@@ -13,21 +13,21 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
-			
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
 			<h2><em>What is Chocolate You Say?</em></h2>
+			<p><img src="Images/watischoc.jpg" width="279" height="337" alt="watischoc" longdesc="Images/watischoc.jpg" /></p>
 			<p>Chocolate is a raw or processed food produced from the seed of the tropical Theobroma cacao tree. Cacao has been cultivated for at least three millennia in Mexico, Central America and Northern South America. Its earliest documented use is around 1100 BC. The majority of the Mesoamerican people made chocolate beverages, including the Aztecs, who made it into a beverage known as xocolatl, a Nahuatl word meaning &quot;bitter water&quot;. The seeds of the cacao tree have an intense bitter taste, and must be fermented to develop the flavor.</p>
 			<p>After fermentation, the beans are dried, then cleaned, and then roasted, and the shell is removed to produce cacao nibs. The nibs are then ground to cocoa mass, pure chocolate in rough form. Because this cocoa mass usually is liquefied then molded with or without other ingredients, it is called chocolate liquor. The liquor also may be processed into two components: cocoa solids and cocoa butter. Unsweetened baking chocolate (bitter chocolate) contains primarily cocoa solids and cocoa butter in varying proportions. Much of the chocolate consumed today is in the form of sweet chocolate, combining cocoa solids, cocoa butter or other fat, and sugar. Milk chocolate is sweet chocolate that additionally contains milk powder or condensed milk. White chocolate contains cocoa butter, sugar, and milk but no cocoa solids.</p>
 			<p>Cocoa solids contain alkaloids such as theobromine and phenethylamine, which have physiological effects on the body. It has been linked to serotonin levels in the brain. Some research found that chocolate, eaten in moderation, can lower blood pressure. The presence of theobromine renders chocolate toxic to some animals,especially dogs and cats.</p>
