--- a/chocolate-chip-cookies.html
+++ b/chocolate-chip-cookies.html
@@ -13,27 +13,45 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
-			
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
-			<p>Hello. I am placeholder content.</p>
+			<h2><em>Chocolate Chip Cookies</em></h2>
+			<p><img src="Images/cookies.jpg" width="315" height="285" alt="cookies" longdesc="Images/cookies.jpg" /></p>
+			<p>Original recipe makes 4 dozen Change Servings</p>
+			<p>Ingredients</p>
+			<p> 1 cup butter, softened</p>
+			<p> 1 cup white sugar</p>
+			<p> 1 cup packed brown sugar</p>
+			<p> 2 eggs</p>
+			<p> 2 teaspoons vanilla extract</p>
+			<p> 3 cups all-purpose flour</p>
+			<p> 1 teaspoon baking soda</p>
+			<p> 2 teaspoons hot water</p>
+			<p> 1/2 teaspoon salt</p>
+			<p> 2 cups semisweet chocolate chips</p>
+			<p> 1 cup chopped walnuts</p>
+			<p>Directions</p>
+			<p>1.) Preheat oven to 350 degrees F (175 degrees C).<br />
+				2.) Cream together the butter, white sugar, and brown sugar until smooth. Beat in the eggs one at a time, then stir in the vanilla. Dissolve baking soda in hot water. Add to batter along with salt. Stir in flour, chocolate chips, and nuts. Drop by large spoonfuls onto ungreased pans.<br />
+				3.) Bake for about 10 minutes in the preheated oven, or until edges are nicely browned.<br />
+			</p>
 			<div class="navigation">
-			<table>
+			<table cellpadding="35" cellspacing="35">
 				<tr>
-					<td><a href="chocolate-molten-lava-cake.html">Chocolate Molten lava Cake</a></td>
-					<td><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies</a></td>
-					<td><a href="homemade-chocolate-pudding.html">Homemade Chocolate Pudding</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-molten-lava-cake.html">Chocolate Molten lava Cake</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies</a></td>
+					<td bgcolor="#66FFCC"><a href="homemade-chocolate-pudding.html">Homemade Chocolate Pudding</a></td>
 				</tr>
 			</table>
 			<!-- InstanceEndEditable -->
