--- a/chocolate-molten-lava-cake.html
+++ b/chocolate-molten-lava-cake.html
@@ -13,27 +13,42 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
-			
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
-			<p>Hello. I am placeholder content.</p>
+			<h2><em>Chocolate Molten Lava Cake...MMmmm...</em></h2>
+			<p><img src="Images/moltenlava.jpg" width="287" height="255" alt="moltenlava" longdesc="Images/moltenlava.jpg" /></p>
+			<p>Ingredients</p>
+			<p> 6 (1-ounce) squares bittersweet chocolate<br />
+				2 (1-ounce) squares semisweet chocolate<br />
+				10 tablespoons (1 1/4 stick) butter<br />
+				1/2 cup all-purpose flour<br />
+				1 1/2 cups confectioners' sugar<br />
+				3 large eggs<br />
+				3 egg yolks<br />
+				1 teaspoon vanilla extract<br />
+				2 tablespoons orange liqueur</p>
+			<p>Directions</p>
+			<p>Preheat oven to 425 degrees F.</p>
+			<p>Grease 6 (6-ounce) custard cups. Melt the chocolates and butter in the microwave, or in a double boiler. Add the flour and sugar to chocolate mixture. Stir in the eggs and yolks until smooth. Stir in the vanilla and orange liqueur. Divide the batter evenly among the custard cups. Place in the oven and bake for 14 minutes. The edges should be firm but the center will be runny. Run a knife around the edges to loosen and invert onto dessert plates.<br />
+			</p>
+			<p>&nbsp;</p>
 			<div class="navigation">
-			<table>
+			<table cellpadding="35" cellspacing="35">
 				<tr>
-					<td><a href="chocolate-molten-lava-cake.html">Chocolate Molten lava Cake</a></td>
-					<td><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies</a></td>
-					<td><a href="homemade-chocolate-pudding.html">Homemade Chocolate Pudding</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-molten-lava-cake.html">Chocolate Molten lava Cake</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies</a></td>
+					<td bgcolor="#66FFCC"><a href="homemade-chocolate-pudding.html">Homemade Chocolate Pudding</a></td>
 				</tr>
 			</table>
 			<!-- InstanceEndEditable -->
