--- a/chocolate-recipes.html
+++ b/chocolate-recipes.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -14,26 +13,28 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
 			<h2><em>Yummy Chocolate Recipes!</em></h2>
+			<p><img src="Images/recipesss.jpg" width="470" height="320" alt="recipess" longdesc="Images/recipesss.jpg" />  <img src="Images/keepcalmand.jpg" width="467" height="317" alt="keepcalm" longdesc="Images/keepcalmand.jpg" /></p>
+			<p>If you are looking for some delicious chocolate recipes, click on the links below to guide you:</p>
 			<div class="navigation">
-			<table>
+			<table cellpadding="35" cellspacing="35">
 				<tr>
-					<td><a href="chocolate-molten-lava-cake.html">Chocolate Molten lava Cake</a></td>
-					<td><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies</a></td>
-					<td><a href="homemade-chocolate-pudding.html">Homemade Chocolate Pudding</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-molten-lava-cake.html">Chocolate Molten lava Cake</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies</a></td>
+					<td bgcolor="#66FFCC"><a href="homemade-chocolate-pudding.html">Homemade Chocolate Pudding</a></td>
 				</tr>
 			</table>
 			<!-- InstanceEndEditable -->
@@ -42,5 +43,4 @@
 		</div>
 	</div>
 </body>
-<!-- InstanceEnd -->
-</html>
+<!-- InstanceEnd --></html>
