--- a/chocolate-restaurants.html
+++ b/chocolate-restaurants.html
@@ -13,21 +13,41 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
-			
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
-			<p>Hello. I am placeholder content.</p>
+			<h2><em><strong>Chocolate Restaurants in New York City!</strong></em></h2>
+			<p>Here are some wonderful restaurants to visit with your loved  ones for a chance to enjoy some delicious chocolate, all located in New York City!</p>
+			<p><em>Ayza Wine &amp; Chocolate Bar</em></p>
+			<p><img src="Images/ayza.jpg" width="400" height="300" alt="ayza" longdesc="Images/ayza.jpg" /></p>
+			<p>11 West 31st Street<br />
+				New York<br />
+				(212) 714-2992 </p>
+			<p>The proprietors of AYZA Wine &amp; Chocolate Bar are committed to providing an impeccable, first-class dining experience through their unique menu, coupled with a selection of over 90 fine wines and champagnes from all over the world. AYZA Wine &amp; Chocolate Bar, offers its patrons the finest food and wine in an elegant, yet comfortable atmosphere, in which to dine, meet friends, or have drinks after work. AYZA was designed by world-renowned architect Richard Bloch. Some of his design credits include Le Bernardin, Masa and Sony Club. AYZA's decor is a contemporary, modern theme with sleek clean lines and has indoor and outdoor seating available.</p>
+			<p><em>Chocolat Restaurant Lounge</em></p>
+			<p><img src="Images/chocolat.jpg" width="286" height="329" alt="chocolat" longdesc="Images/chocolat.jpg" /></p>
+			<p>2217 Frederick Douglass <br />
+				Boulevard<br />
+				New York<br />
+				(212) 222-4545</p>
+			<p>Chocolat takes its name from of the fruit of the cacao seed, after it has surrendered itself in liquid, becoming what the Aztecs called the nectar of the gods, the sweat of stars. Cross the threshold of Chocolat Restaurant Lounge and enter a world where urban meets the urbane and the sophistication of the surroundings twins the pleasures of the palate. The eclectic menu features succulent meats, the freshest seafood, and straight from the garden salads and vegetables, seasoned with hints of spices from around the planet. There are new creations and new takes on some old favorites, all prepared with the precision, skill and care to satisfy the most discriminating tastes. Pair your meal with an imaginative cocktail or a robust wine, and a finishing note of one of Chocolat’s delectable desserts to cap off a feast of culinary delights.Whether it’s an intimate evening for two or happy hour at the bar, dinner with colleagues or a family gathering for brunch, hang time with the girls or watching the game with the fellas; from the dark and sensual espresso -toned private room, to the window-lined, art-filled main room and balcony seating slightly overlooking it all, Chocolat has the ambience to fit every occasion.</p>
+			<p><em>Max Brenner</em></p>
+			<p><img src="Images/maxbrenner.jpg" width="368" height="276" alt="maxb" longdesc="Images/maxbrenner.jpg" /></p>
+			<p>841 Broadway <br />
+				New York, NY 10003<br />
+				(646) 467-8803</p>
+			<p>Max Brenner, the bald man, is creating a new chocolate culture. In the following months we will reveal to you the fine layers of this unique approach to chocolate. We invite you to see, to listen and to feel Max’s chocolate love story.</p>
+			<p>&nbsp;</p>
 			<!-- InstanceEndEditable -->
 		</div>
 		<div class="footer">
