--- a/fun-facts.html
+++ b/fun-facts.html
@@ -13,21 +13,21 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
-			
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
-			<h2><em>Fun Facts:</em><em></em></h2>
+			<h2><em><strong>Did You Know?</strong></em></h2>
+			<p><img src="Images/diduknow.jpg" width="284" height="423" alt="diduknow" longdesc="Images/diduknow.jpg" /></p>
 			<p>1. The first recorded “Death by Chocolate” case occurred in the 17th Century in Chiapas, Mexico.  Upper class Spaniards were so addicted to chocolate that they refused to adhere to a church dictated chocolate ban that forbade them from eating or drinking any food during the church services.  As a result, the people of the town refused not only listen to the ban but chose to attend worship services in convents instead.  The Bishop who passed the law was later found dead due to poison being mixed into his daily cup of chocolate.</p>
 			<p>2. The word “chocolate” comes from the Aztec word, “Xocolatl”, which ironically means “bitter water”.</p>
 			<p>3. The biggest bar of chocolate ever made was created in 2000 and weighed 5,000 pounds.  Turin is the city in Italy that can be proud of this accomplishment.</p>
