--- a/gianduja-chocolate.html
+++ b/gianduja-chocolate.html
@@ -13,36 +13,37 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
-			
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
 			<h2><em>Gianduja Chocolate</em></h2>
+			<p><img src="Images/gianduja.jpg" width="337" height="331" alt="gianduja" longdesc="Images/gianduja.jpg" /></p>
 			<p>What's gianduja? An exotic rainforest berry? A rude Italian insult? An obscure European city-state? Gianduja (pronounced zhahn-DOO-yuh) is an Italian confection made of chocolate and 30% hazelnut paste. Almond and walnut gianduja exist as well, but they're very rare.</p>
 			<p>In the United States, chocolate bars usually come in three varieties: milk, dark, and white, but in Italy, gianduja is a popular fourth variety. Beside chocolate bars, gianduja comes in soft forms too. The nutty chocolatey filling is a popular center for bonbons and is often found in other sweet treats like mousse and gelato.</p>
 			<p>Gianduja is usually lighter than dark chocolate and slightly darker than milk chocolate.The hazelnuts have to be ground up and mixed with the chocolate for it to be called gianduja.</p>
 			<p>Spreadable gianduja—which can go on toast, crackers, or even in crepes—is wildly popular in Europe, and increasingly more in the United States. You've probably heard of Nutella, no? Nutella was originally called &quot;Crema Gianduja.&quot;</p>
 			<p>So where does the word &quot;gianduja&quot; come from? The term originated in the 17th century in the city of Turin, the capital of the Piedmont region of northern Italy. Before it had any chocolate connotation, Gianduja was a marionette character. Later, when chocolatiers were short on cocoa beans during the Napoleonic blockade, they combined hazelnut and chocolate and named their new concoction &quot;gianduja,&quot; just like the familiar character. Gianduja was a delicious way to make their precious cocoa go further (think chicory and New Orleans-style coffee).</p>
 			<div class="navigation">
-				<table>
+				<table cellpadding="15" cellspacing="15">
 					<tr>
-						<td><a href="white-chocolate.html">White Chocolate</a></td>
-						<td><a href="milk-chocolate.html">Milk Chocolate</a></td>
-						<td><a href="unsweetened-chocolate.html">Unsweetened Chocolate</a></td>
-						<td><a href="gianduja-chocolate.html">Gianduja Chocolate</a></td>
-						<td><a href="dark-chocolate.html">Dark Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="white-chocolate.html">White Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="milk-chocolate.html">Milk Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="unsweetened-chocolate.html">Unsweetened Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="gianduja-chocolate.html">Gianduja Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="dark-chocolate.html">Dark Chocolate</a></td>
 					</tr>
-			</table></div>
+				</table>
+			</div>
 			<!-- InstanceEndEditable -->
 		</div>
 		<div class="footer">
