--- a/home.html
+++ b/home.html
@@ -13,24 +13,22 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
-			
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
 			<h1> Welcome To My Awesome Website About Chocolate! </h1>
+			<p><img src="Images/differentypesofchoc.jpg" alt="difftypesofchoc" width="930" height="300" align="middle" longdesc="Images/differentypesofchoc.jpg" /></p>
 			<p>Here, all of you chocolate lovers will find out about all the wonderful things chocolate can offer you. Learn more about the different types of chocolates that exist, some delicious recipes that you can make with chocolate, engage in on some interesting facts, and visit a few of the chocolate restaurants in New York City! Feel free to enlighten yourselves with this cool website! :) </p>
-			<p>&nbsp;</p>
-<h1>&nbsp;</h1>
 			<!-- InstanceEndEditable -->
 		</div>
 		<div class="footer">
