--- a/homemade-chocolate-pudding.html
+++ b/homemade-chocolate-pudding.html
@@ -13,27 +13,38 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
-			
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
-			<p>Hello. I am placeholder content.</p>
+			<h2><em>Homemade Chocolate Pudding</em></h2>
+			<p><img src="Images/pudding.jpg" width="304" height="299" alt="pudding" longdesc="Images/pudding.jpg" /></p>
+			<p>Ingredients</p>
+			<p> 1 cup sugar<br />
+				1/2 cup baking cocoa<br />
+				1/4 cup cornstarch<br />
+				1/2 teaspoon salt<br />
+				4 cups milk<br />
+				2 tablespoons butter<br />
+				2 teaspoons vanilla extract<br />
+				M&amp;M's, optional</p>
+			<p>Directions</p>
+			<p>In a heavy saucepan, combine sugar, cocoa, cornstarch and salt. gradually add milk. Bring to a boil over medium heat; boil and stir for 2 minutes. Remove from the heat; stir in butter and vanilla. Spoon into individual serving dishes. Chill until serving. Sprinkle with M&amp;M's if desired. Yield: 6-8 servings.</p>
 			<div class="navigation">
-			<table>
+			<table cellpadding="35" cellspacing="35">
 				<tr>
-					<td><a href="chocolate-molten-lava-cake.html">Chocolate Molten lava Cake</a></td>
-					<td><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies</a></td>
-					<td><a href="homemade-chocolate-pudding.html">Homemade Chocolate Pudding</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-molten-lava-cake.html">Chocolate Molten lava Cake</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies</a></td>
+					<td bgcolor="#66FFCC"><a href="homemade-chocolate-pudding.html">Homemade Chocolate Pudding</a></td>
 				</tr>
 			</table>
 			<!-- InstanceEndEditable -->
