--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
-			
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
