--- a/milk-chocolate.html
+++ b/milk-chocolate.html
@@ -13,34 +13,35 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
-			
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
 			<h2><em>Milk Chocolate</em></h2>
+			<p><img src="Images/milkchoc.jpg" width="346" height="322" alt="milkchoc" longdesc="Images/milkchoc.jpg" /></p>
 			<p>The process of making milk chocolate was perfected by Daniel Peter of Vevey, Switzerland. The Swiss candle-maker joined his father-in-law's chocolate business and in 1867 he began experimenting with milk as an ingredient by combining the cocoa nib, sugar, fat, and condensed milk. In 1875 he brought milk chocolate to the market.<br />
-			milk chocolate cubes 	Milk chocolate is formulated by substituting whole milk solids for a portion of the chocolate liquor used in producing sweet chocolate. The US Government requires a 10% concentration of chocolate liquor and the European rules specify a minimum of 25% cocoa solids. Therefore milk chocolate does not contain as much chocolate liquor as dark chocolate, which gives it a softer chocolate flavour.</p>
+				milk chocolate cubes 	Milk chocolate is formulated by substituting whole milk solids for a portion of the chocolate liquor used in producing sweet chocolate. The US Government requires a 10% concentration of chocolate liquor and the European rules specify a minimum of 25% cocoa solids. Therefore milk chocolate does not contain as much chocolate liquor as dark chocolate, which gives it a softer chocolate flavour.</p>
 			<p>The quality of milk chocolate varies, the better brands contain a higher percentage of chocolate liquor using pure ingredients with no artificial flavoring. European milk chocolate generally contains condensed milk, whereas American and British milk chocolate contains a milk and sugar mixture. </p>
 			<div class="navigation">
-				<table>
+				<table cellpadding="15" cellspacing="15">
 					<tr>
-						<td><a href="white-chocolate.html">White Chocolate</a></td>
-						<td><a href="milk-chocolate.html">Milk Chocolate</a></td>
-						<td><a href="unsweetened-chocolate.html">Unsweetened Chocolate</a></td>
-						<td><a href="gianduja-chocolate.html">Gianduja Chocolate</a></td>
-						<td><a href="dark-chocolate.html">Dark Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="white-chocolate.html">White Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="milk-chocolate.html">Milk Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="unsweetened-chocolate.html">Unsweetened Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="gianduja-chocolate.html">Gianduja Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="dark-chocolate.html">Dark Chocolate</a></td>
 					</tr>
-			</table></div>
+				</table>
+			</div>
 			<!-- InstanceEndEditable -->
 		</div>
 		<div class="footer">
