--- a/types-of-chocolates.html
+++ b/types-of-chocolates.html
@@ -14,30 +14,31 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
-<h2><em>How Many Types of Chocolates Are There?</em></h2>
-<p>Chocolate is a range of products derived from cocoa (cacao), mixed with fat (i.e. cocoa butter) and finely powdered sugar to produce a solid confection. There are several types of chocolate according to the proportion of cocoa used in a particular formulation. Click on the following links below to learn more!</p>
-
+			<h2><em>How Many Types of Chocolates Are There?</em></h2>
+			<p>Chocolate is a range of products derived from cocoa (cacao), mixed with fat (i.e. cocoa butter) and finely powdered sugar to produce a solid confection. There are several types of chocolate according to the proportion of cocoa used in a particular formulation. Click on the following links below to learn more!</p>
+			<p><img src="Images/howmany.jpg" width="917" height="379" alt="howmany" longdesc="Images/howmany.jpg" /></p>
+			<p>&nbsp;</p>
 			<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="white-chocolate.html">White Chocolate</a></td>
-					<td><a href="milk-chocolate.html">Milk Chocolate</a></td>
-					<td><a href="unsweetened-chocolate.html">Unsweetened Chocolate</a></td>
-					<td><a href="gianduja-chocolate.html">Gianduja Chocolate</a></td>
-					<td><a href="dark-chocolate.html">Dark Chocolate</a></td>
+					<td bgcolor="#66FFCC"><a href="white-chocolate.html">White Chocolate</a></td>
+					<td bgcolor="#66FFCC"><a href="milk-chocolate.html">Milk Chocolate</a></td>
+					<td bgcolor="#66FFCC"><a href="unsweetened-chocolate.html">Unsweetened Chocolate</a></td>
+					<td bgcolor="#66FFCC"><a href="gianduja-chocolate.html">Gianduja Chocolate</a></td>
+					<td bgcolor="#66FFCC"><a href="dark-chocolate.html">Dark Chocolate</a></td>
 				</tr>
 			</table>
 			<!-- InstanceEndEditable -->
