--- a/unsweetened-chocolate.html
+++ b/unsweetened-chocolate.html
@@ -13,34 +13,35 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
-			
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
 			<h2><em>Unsweetened Chocolate</em></h2>
+			<p><img src="Images/unsweetened.jpg" width="346" height="321" alt="unsweetened" longdesc="Images/unsweetened.jpg" /></p>
 			<p>Unsweetened chocolate is also called baking, plain or bitter chocolate.</p>
 			<p>This is chocolate in its rawest form.  Chocolate liquor that has been refined and contains 50-55% cocoa butter. The quality of the chocolate is determined by the type of cocoa beans used and how they have been processed. Since no sugar has been added to the chocolate it has a strong, bitter taste that is used in cooking and baking but is never eaten out of hand. </p>
 			<p>Unsweetened chocolate, if well wrapped and stored in a cool dry place with good air circulation, will keep several years.</p>
 			<div class="navigation">
-				<table>
+				<table cellpadding="15" cellspacing="15">
 					<tr>
-						<td><a href="white-chocolate.html">White Chocolate</a></td>
-						<td><a href="milk-chocolate.html">Milk Chocolate</a></td>
-						<td><a href="unsweetened-chocolate.html">Unsweetened Chocolate</a></td>
-						<td><a href="gianduja-chocolate.html">Gianduja Chocolate</a></td>
-						<td><a href="dark-chocolate.html">Dark Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="white-chocolate.html">White Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="milk-chocolate.html">Milk Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="unsweetened-chocolate.html">Unsweetened Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="gianduja-chocolate.html">Gianduja Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="dark-chocolate.html">Dark Chocolate</a></td>
 					</tr>
-			</table></div>
+				</table>
+			</div>
 			<!-- InstanceEndEditable -->
 		</div>
 		<div class="footer">
