--- a/white-chocolate.html
+++ b/white-chocolate.html
@@ -13,37 +13,37 @@
 <body>
 	<div class="wrapper">
 		<div class="navigation">
-			<table>
+			<table cellpadding="15" cellspacing="15">
 				<tr>
-					<td><a href="home.html">Home</a></td>
-					<td><a href="about.html">About</a></td>
-					<td><a href="types-of-chocolates.html">Types of Chocolates</a></td>
-					<td><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
-					<td><a href="fun-facts.html">Fun Facts</a></td>
-					<td><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
+					<td bgcolor="#66FFCC"><a href="home.html">Home</a></td>
+					<td bgcolor="#66FFCC"><a href="about.html">About</a></td>
+					<td bgcolor="#66FFCC"><a href="types-of-chocolates.html">Types of Chocolates</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-recipes.html">Chocolate Recipes</a></td>
+					<td bgcolor="#66FFCC"><a href="fun-facts.html">Fun Facts</a></td>
+					<td bgcolor="#66FFCC"><a href="chocolate-restaurants.html">Chocolate Restaurants</a></td>
 				</tr>
 			</table>
-			
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
-			<h2><em>White Chocolate</em></h2>
+			<h2><em> White Chocolate</em> </h2>
+			<h2><img src="Images/whitechoc.jpg" width="384" height="306" alt="whitechoc" longdesc="Images/whitechoc.jpg" /></h2>
 			<p>White chocolate is a chocolate derivative. It commonly consists of cocoa butter, sugar, milk solids and salt, and is characterized by a pale yellow or ivory appearance. The melting point of cocoa butter, its primary cacao bean component, is high enough to keep white chocolate solid at room temperature.<br />
-				Composition and regulations<br />
-			Raw white chocolate</p>
+			</p>
 			<p>White chocolate is a derivative of chocolate as it does not contain cocoa solids, the primary nutritional constituent of chocolate liquor. During the manufacturing process, the dark-colored solids of the cacao bean are separated from its fatty content (as with milk, semi-sweet, and dark chocolate) but, unlike conventional chocolates, the cocoa solids are not later recombined. As a result, white chocolate does not contain the antioxidant properties or many characterizing ingredients of chocolate, such as thiamine, riboflavin, theobromine, and phenylethylamine.Often, the cocoa butter is deodorized to remove its strong taste.</p>
 			<p>Some preparations known as confectioner's coating or simmer coating may be confused with white chocolate, but are made from inexpensive solid or hydrogenated vegetable and animal fats, and are not at all derived from cocoa. These preparations may actually be white (in contrast to white chocolate's ivory shade and will lack cocoa butter's flavor.</p>
 			<p>Regulations govern what may be marketed as &quot;white chocolate&quot;: In the United States, since 2004, white chocolate must be (by weight) at least 20% cocoa butter, 14% total milk solids, and 3.5% milk fat, and no more than 55% sugar or other sweeteners.[3] Before this date, U.S. firms required temporary marketing permits to sell white chocolate. The European Union has adopted the same standards, except that there is no limit on sugar or sweeteners.</p>
 			<div class="navigation">
-				<table>
+				<table cellpadding="15" cellspacing="15">
 					<tr>
-						<td><a href="white-chocolate.html">White Chocolate</a></td>
-						<td><a href="milk-chocolate.html">Milk Chocolate</a></td>
-						<td><a href="unsweetened-chocolate.html">Unsweetened Chocolate</a></td>
-						<td><a href="gianduja-chocolate.html">Gianduja Chocolate</a></td>
-						<td><a href="dark-chocolate.html">Dark Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="white-chocolate.html">White Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="milk-chocolate.html">Milk Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="unsweetened-chocolate.html">Unsweetened Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="gianduja-chocolate.html">Gianduja Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="dark-chocolate.html">Dark Chocolate</a></td>
 					</tr>
-			</table></div>
+				</table>
+			</div>
 			<!-- InstanceEndEditable -->
 		</div>
 		<div class="footer">
